Fix vertical spacing.

--- a/styles.css
+++ b/styles.css
@@ -355,7 +355,7 @@
 }
 
 .page-nav-bottom {
-    margin-top: -10px;
+    margin-top: 30px;
 }
 
 .nav-btn {
